[package]
name = "oxide-engine-api"
version = "0.12.2"
edition = "2024"
description = "API for Oxide game engine plugins"
license = "MIT"
repository = "https://github.com/Enix50/oxide-engine-api"
homepage = "https://github.com/Enix50/oxide-engine-api"
documentation = "https://docs.rs/oxide-engine-api"
readme = "README.md"
keywords = ["game", "engine", "plugin", "gamedev"]
categories = ["game-engines", "development-tools"]

###resolver = "2"